security service refactoring